--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -114,7 +114,7 @@
 
                 <FrameLayout
                     android:id="@+id/firstRatingFrame"
-                    android:layout_width="17dp"
+                    android:layout_width="5dp"
                     android:padding="0dp"
                     android:layout_margin="0dp"
                     android:layout_height="match_parent">
@@ -124,6 +124,7 @@
                     android:orientation="vertical"
                     android:padding="0dp"
                     android:layout_width="100dp"
+                    android:layout_weight="0"
                     android:layout_margin="0dp"
                     android:layout_height="match_parent">
 
@@ -155,6 +156,7 @@
                     android:orientation="vertical"
                     android:padding="0dp"
                     android:layout_width="70dp"
+                    android:layout_weight="0"
                     android:layout_height="match_parent">
 
                     <TextView
@@ -196,7 +198,8 @@
                     android:paddingTop="10dp"
                     android:paddingEnd="10dp"
                     android:paddingBottom="0dp"
-                    android:layout_width="80dp"
+                    android:layout_width="70dp"
+                    android:layout_weight="0"
                     android:layout_height="match_parent">
 
                     <ImageView
@@ -226,6 +229,7 @@
                     android:orientation="vertical"
                     android:padding="0dp"
                     android:layout_width="70dp"
+                    android:layout_weight="0"
                     android:layout_height="match_parent">
 
                     <TextView
@@ -265,15 +269,16 @@
                 <TextView
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="5dp"
                     android:id="@+id/firstcntrating"
                     android:textSize="12sp"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:background="@drawable/round_box_white"
-                    android:layout_width="25sp"
-                    android:layout_height="25sp">
+                    android:layout_weight="0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
                 </TextView>
 
             </LinearLayout>
@@ -317,7 +322,9 @@
 
         <LinearLayout
             android:id="@+id/llResForListview"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
+            android:padding="0dp"
+            android:layout_margin="0dp"
             android:layout_height="wrap_content">
 
                 <ListView
