--- a/app/src/main/res/layout/item_directlist.xml
+++ b/app/src/main/res/layout/item_directlist.xml
@@ -37,7 +37,7 @@
 
             <FrameLayout
                 android:id="@+id/RatingFrame"
-                android:layout_width="17dp"
+                android:layout_width="5dp"
                 android:padding="0dp"
                 android:layout_margin="0dp"
                 android:layout_height="match_parent">
@@ -85,6 +85,7 @@
                         android:orientation="vertical"
                         android:padding="0dp"
                         android:layout_width="100dp"
+                        android:layout_weight="0"
                         android:layout_margin="0dp"
                         android:layout_height="match_parent">
 
@@ -115,6 +116,7 @@
                         android:orientation="vertical"
                         android:padding="0dp"
                         android:layout_width="70dp"
+                        android:layout_weight="0"
                         android:layout_height="match_parent">
 
                         <TextView
@@ -153,7 +155,8 @@
                         android:paddingTop="10dp"
                         android:paddingEnd="0dp"
                         android:paddingBottom="0dp"
-                        android:layout_width="80dp"
+                        android:layout_width="70dp"
+                        android:layout_weight="0"
                         android:layout_height="match_parent">
 
                         <ImageView
@@ -183,6 +186,7 @@
                         android:orientation="vertical"
                         android:padding="0dp"
                         android:layout_width="70dp"
+                        android:layout_weight="0"
                         android:layout_height="match_parent">
 
                         <TextView
@@ -219,15 +223,16 @@
                     <TextView
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginStart="5dp"
                         android:id="@+id/cntrating"
                         android:textSize="12sp"
                         android:textAlignment="center"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:background="@drawable/round_box_white"
-                        android:layout_width="25sp"
-                        android:layout_height="25sp" />
+                        android:layout_weight="0"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
 
             </LinearLayout>
