--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,8 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/mobile_navigation"
-            app:startDestination="@+id/navigation_home">
+            app:startDestination="@id/main_frag"
+            >
 
             <fragment
                 android:id="@+id/navigation_home"
@@ -72,12 +73,6 @@
                 tools:layout="@layout/fragment_flight" />
 
             <fragment
-                android:id="@+id/main_fragment"
-                android:name="com.stukalov.staffairlines.pro.ui.MainFragment"
-                android:label=""
-                tools:layout="@layout/fragment_main" />
-
-            <fragment
                 android:id="@+id/carousel_frag"
                 android:name="com.stukalov.staffairlines.pro.ui.carousel.CarouselFragment"
                 android:label=""
@@ -100,9 +95,8 @@
 
             <fragment
                 android:id="@+id/main_frag"
-                android:name="com.stukalov.staffairlines.pro.ui.main.MainFragment0"
+                android:name="com.stukalov.staffairlines.pro.ui.main.MainFragment"
                 android:label=""
                 tools:layout="@layout/fragment_main"
                 />
-
-        </navigation>
+</navigation>
