--- a/app/src/main/res/layout/item_directlist.xml
+++ b/app/src/main/res/layout/item_directlist.xml
@@ -2,11 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="0dp"
     android:layout_margin="0dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--1-->
     <LinearLayout
         android:orientation="vertical"
         android:background="@color/white"
@@ -23,8 +24,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
-            android:layout_height="30dp" />
+            android:layout_height="wrap_content" />
 
+        <!--2-->
         <LinearLayout
             android:id="@+id/llFlightLayout"
             android:orientation="horizontal"
@@ -32,7 +34,7 @@
             android:layout_margin="0dp"
             app:flow_horizontalAlign="start"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="match_parent"
             tools:ignore="MissingConstraints">
 
             <FrameLayout
@@ -43,6 +45,7 @@
                 android:layout_height="match_parent">
             </FrameLayout>
 
+            <!--3-->
             <LinearLayout
                 android:orientation="vertical"
                 android:padding="0dp"
@@ -50,6 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <!--4-->
                 <LinearLayout
                     android:id="@+id/llWaitInfo"
                     android:orientation="horizontal"
@@ -73,19 +77,22 @@
                         android:layout_height="wrap_content" />
 
                 </LinearLayout>
+                <!--4-->
 
+                <!--4-->
                 <LinearLayout
                     android:orientation="horizontal"
                     android:padding="0dp"
                     android:layout_margin="0dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="70dp">
 
+                    <!--5-->
                     <LinearLayout
                         android:orientation="vertical"
                         android:padding="0dp"
-                        android:layout_width="100dp"
-                        android:layout_weight="0"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
                         android:layout_margin="0dp"
                         android:layout_height="match_parent">
 
@@ -111,12 +118,14 @@
                             android:textColor="@color/black" />
 
                     </LinearLayout>
+                    <!--5-->
 
+                    <!--5-->
                     <LinearLayout
                         android:orientation="vertical"
                         android:padding="0dp"
-                        android:layout_width="70dp"
-                        android:layout_weight="0"
+                        android:layout_weight="2"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent">
 
                         <TextView
@@ -142,38 +151,40 @@
                             android:id="@+id/deppoint"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="0dp"
                             android:padding="0dp"
+                            android:layout_marginBottom="10dp"
                             android:textSize="16sp"
                             android:textColor="@color/black" />
 
                     </LinearLayout>
+                    <!--5-->
 
+                    <!--5-->
                     <LinearLayout
                         android:orientation="vertical"
                         android:paddingStart="0dp"
                         android:paddingTop="10dp"
                         android:paddingEnd="0dp"
                         android:paddingBottom="0dp"
-                        android:layout_width="70dp"
-                        android:layout_weight="0"
+                        android:layout_weight="2"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent">
 
                         <ImageView
                             android:id="@+id/planepic"
                             android:layout_width="15dp"
                             android:layout_height="15dp"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginLeft="0dp"
+                            android:layout_gravity="start"
+                            android:layout_marginStart="15dp"
                             android:layout_marginTop="10dp"
-                            android:layout_marginRight="0dp"
+                            android:layout_marginEnd="0dp"
                             tools:ignore="ContentDescription" />
 
                         <TextView
                             android:id="@+id/durtext"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textAlignment="center"
+                            android:textAlignment="textStart"
                             android:layout_margin="0dp"
                             android:padding="0dp"
                             android:textSize="12sp"
@@ -181,12 +192,14 @@
                         </TextView>
 
                     </LinearLayout>
+                    <!--5-->
 
+                    <!--5-->
                     <LinearLayout
                         android:orientation="vertical"
                         android:padding="0dp"
-                        android:layout_width="70dp"
-                        android:layout_weight="0"
+                        android:layout_weight="2"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent">
 
                         <TextView
@@ -213,32 +226,47 @@
                             android:id="@+id/arrpoint"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="0dp"
+                            android:layout_marginBottom="10dp"
                             android:padding="0dp"
                             android:textSize="16sp"
                             android:textColor="@color/black" />
 
                     </LinearLayout>
+                    <!--5-->
 
-                    <TextView
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginStart="5dp"
-                        android:id="@+id/cntrating"
-                        android:textSize="12sp"
-                        android:textAlignment="center"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:background="@drawable/round_box_white"
-                        android:layout_weight="0"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                    <!--5-->
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_marginTop="15dp"
+                            android:layout_marginBottom="10dp"
+                            android:layout_marginStart="5dp"
+                            android:id="@+id/cntrating"
+                            android:textSize="12sp"
+                            android:textAlignment="center"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:background="@drawable/round_box_white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                    </LinearLayout>
+                    <!--5-->
+
                 </LinearLayout>
+                <!--4-->
 
             </LinearLayout>
+            <!--3-->
 
         </LinearLayout>
+        <!--2-->
 
     </LinearLayout>
+    <!--1-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
