--- a/app/src/main/res/layout/item_pointlist.xml
+++ b/app/src/main/res/layout/item_pointlist.xml
@@ -23,7 +23,7 @@
             android:orientation="vertical"
             android:padding="0dp"
             android:layout_width="fill_parent"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
 
             <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/pointname"
