--- a/app/src/main/res/layout/fragment_credentials.xml
+++ b/app/src/main/res/layout/fragment_credentials.xml
@@ -7,129 +7,163 @@
     tools:context=".ui.setting.CredentialsFragment">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
-        android:layout_height="match_parent"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="33dp"
+        tools:layout_editor_absoluteY="52dp">
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_gravity="end"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="end"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/ivCredCoins"
-                android:src="@drawable/coins"
-                android:minHeight="22dp"
-                android:minWidth="20dp"
-                android:scaleType="fitXY"
-                android:layout_marginEnd="2dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
+                android:minWidth="20dp"
+                android:minHeight="22dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/coins" />
 
             <TextView
                 android:id="@+id/tvCredCoins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
                 android:text="0"
                 android:textColor="@color/staff_blue"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:layout_marginEnd="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:textStyle="bold" />
 
             <ImageView
-                android:src="@drawable/bell"
-                android:minHeight="22dp"
-                android:minWidth="20dp"
-                android:scaleType="fitXY"
-                android:layout_marginEnd="2dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
+                android:minWidth="20dp"
+                android:minHeight="22dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/bell" />
 
             <TextView
                 android:id="@+id/tvCredSubLost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="5"
                 android:textColor="@color/staff_blue"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content" />
+                android:textStyle="bold" />
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvCredFirst"
-            android:text="To make requests to an agent, please logged in"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_marginTop="80dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:textAlignment="center"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="0dp">
 
-        <TextView
-            android:id="@+id/tvCredLogin"
-            android:textColor="@color/staff_blue"
-            android:textSize="22sp"
-            android:text="Log in"
-            android:layout_marginTop="50dp"
-            android:textAlignment="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tvCredFirst"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:text="To make requests to an agent, please logged in"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/tvCredSecond"
-            android:text="If you want to become an agent, post flight load data and get your own benefits, go to the telegram bot. More about agents read here."
-            android:textSize="16sp"
-            android:textAlignment="center"
-            android:layout_marginTop="80dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvCredDelete"
-            android:text="Delete profile"
-            android:textColor="@color/staff_blue"
-            android:textSize="18sp"
-            android:textAlignment="center"
-            android:layout_marginTop="80dp"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_weight="1"
+            android:layout_height="0dp">
+
+            <TextView
+                android:id="@+id/tvCredLogin"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="Log in"
+                android:textAlignment="center"
+                android:textColor="@color/staff_blue"
+                android:textSize="22sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+
+            <TextView
+                android:id="@+id/tvCredSecond"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:text="If you want to become an agent, post flight load data and get your own benefits, go to the telegram bot. More about agents read here."
+                android:textAlignment="center"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+
+            <TextView
+                android:id="@+id/tvCredDelete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Delete profile"
+                android:textAlignment="center"
+                android:textColor="@color/staff_blue"
+                android:textSize="18sp" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/llCredID"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_marginTop="80dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp">
 
             <TextView
                 android:id="@+id/tvCredID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
                 android:text="ID for support: 3e6a4491db00f6f0f3f30fd38f516ab9"
                 android:textColor="@color/staff_another_gray"
-                android:textSize="13sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:textSize="12sp" />
 
             <ImageView
                 android:id="@+id/ivCredID"
-                android:src="@drawable/copy"
                 android:layout_width="wrap_content"
-                android:minHeight="20dp"
-                android:minWidth="20dp"
-                android:scaleType="fitXY"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
                 android:layout_marginStart="10dp"
-                android:layout_height="wrap_content" />
+                android:minWidth="20dp"
+                android:minHeight="20dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/copy" />
 
         </LinearLayout>
 
