--- a/app/src/main/res/layout/fragment_flight.xml
+++ b/app/src/main/res/layout/fragment_flight.xml
@@ -9,17 +9,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.flight.FlightFragment">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <!--1-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="0dp"
         android:orientation="vertical"
-        android:padding="10dp"
+        android:scrollIndicators="right"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         app:flow_verticalAlign="top"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
+        <!--2-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -50,12 +60,14 @@
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
+            <!--3-->
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_weight="0"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
 
+                <!--4-->
                 <LinearLayout
                     android:id="@+id/llOneBellCoins"
                     android:orientation="horizontal"
@@ -108,15 +120,20 @@
                         android:layout_width="wrap_content" />
 
                 </LinearLayout>
+                <!--4-->
+
             </LinearLayout>
+            <!--3-->
 
         </LinearLayout>
+        <!--2-->
 
+        <!--2-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             >
 
             <TextView
@@ -142,7 +159,9 @@
                 tools:ignore="ContentDescription" />
 
         </LinearLayout>
+        <!--2-->
 
+        <!--2-->
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -156,21 +175,26 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
+        <!--2-->
 
+        <!--2-->
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <!--3-->
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="wrap_content"
+                android:layout_weight="3"
+                android:layout_width="0dp"
                 android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/timedep_one"
                     android:textSize="18sp"
+                    android:text="15:35"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
@@ -179,16 +203,18 @@
                 <TextView
                     android:id="@+id/datedep_one"
                     android:textSize="16sp"
+                    android:text="04 apr, Fri"
                     android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
+            <!--3-->
 
             <TextView
                 android:id="@+id/namedep_one"
-                android:layout_width="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_weight="7"
+                android:layout_width="0dp"
                 android:textAlignment="textStart"
                 android:gravity="center"
                 android:textColor="@color/black"
@@ -197,10 +223,12 @@
                 tools:ignore="RtlCompat" />
 
         </LinearLayout>
+        <!--2-->
 
+        <!--2-->
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -208,28 +236,33 @@
                 android:text="@string/label_in_flight"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:layout_width="wrap_content"
+                android:layout_weight="3"
+                android:layout_width="0dp"
                 android:layout_height="match_parent" />
 
             <TextView
                 android:id="@+id/duration_one"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:layout_marginStart="50dp"
-                android:layout_width="wrap_content"
+                android:layout_weight="7"
+                android:layout_width="0dp"
                 android:layout_height="match_parent" />
 
         </LinearLayout>
+        <!--2-->
 
+        <!--2-->
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <!--3-->
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="wrap_content"
+                android:layout_weight="3"
+                android:layout_width="0dp"
                 android:layout_height="match_parent">
 
                 <TextView
@@ -248,11 +281,12 @@
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
+            <!--3-->
 
             <TextView
                 android:id="@+id/namearr_one"
-                android:layout_width="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_weight="7"
+                android:layout_width="0dp"
                 android:textAlignment="textStart"
                 android:gravity="center"
                 android:textColor="@color/black"
@@ -261,11 +295,13 @@
                 tools:ignore="RtlCompat" />
 
         </LinearLayout>
+        <!--2-->
 
+        <!--2-->
         <LinearLayout
             android:id="@+id/llOneAgentInfo"
             android:orientation="vertical"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -276,14 +312,16 @@
                 android:layout_height="wrap_content"
                 android:text="Flight load details were received from agent Sunni 01m ago" />
 
+            <!--3-->
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
                 android:layout_height="wrap_content">
 
+                <!--4-->
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_weight="1"
@@ -310,7 +348,9 @@
                         android:layout_height="wrap_content" />
 
                 </LinearLayout>
+                <!--4-->
 
+                <!--4-->
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_weight="1"
@@ -337,7 +377,9 @@
                         android:layout_height="wrap_content" />
 
                 </LinearLayout>
+                <!--4-->
 
+                <!--4-->
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_weight="1"
@@ -364,12 +406,18 @@
                         android:layout_height="wrap_content" />
 
                 </LinearLayout>
-             </LinearLayout>
-        </LinearLayout>
+                <!--4-->
 
+            </LinearLayout>
+            <!--3-->
+
+        </LinearLayout>
+        <!--2-->
+
+        <!--2-->
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -390,16 +438,18 @@
                 android:layout_height="match_parent" />
 
         </LinearLayout>
+        <!--2-->
 
+        <!--2-->
         <LinearLayout
             android:id="@+id/llSeatsInfo"
             android:orientation="vertical"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:text="@string/label_classes_available"
-                android:layout_marginTop="10dp"
                 android:textSize="14sp"
                 android:textColor="@color/black"
                 android:layout_width="match_parent"
@@ -412,27 +462,29 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
+        <!--2-->
 
         <Button
             android:id="@+id/btOneAction"
             android:layout_width="300dp"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             style="@style/NotTintedButton"
             android:text="SELECT FLIGHT"
             android:textSize="20sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
             android:layout_gravity="center_horizontal"
             android:shadowColor="@color/staff_blue"
             android:textColor="@color/white"
             android:background="@drawable/search_button_on"
             />
 
+        <!--2-->
         <LinearLayout
             android:id="@+id/llOneButtons"
             android:orientation="horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="0dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -471,6 +523,7 @@
                 />
 
         </LinearLayout>
+        <!--2-->
 
         <TextView
             android:id="@+id/tvOneNewFeature"
@@ -478,7 +531,7 @@
             android:text="New feature! Use the Request button to, clarify seat availability via this airline's agent. This can be helpful on the day of departure."
             android:background="@drawable/box_green"
             android:textColor="@color/black"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="0dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -493,13 +546,16 @@
         <TextView
             android:id="@+id/flyzed_one"
             android:textSize="18sp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:textColor="@color/staff_blue"
             android:textAlignment="center"
+            android:layout_marginBottom="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
+    <!--1-->
+    </ScrollView>
 
     <FrameLayout
         android:id="@+id/spinner_flight"
