--- a/app/src/main/res/layout/item_directlist.xml
+++ b/app/src/main/res/layout/item_directlist.xml
@@ -102,7 +102,7 @@
                             android:layout_height="25dp"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginLeft="0dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="15dp"
                             android:layout_marginRight="0dp"
                             tools:ignore="ContentDescription" />
 
@@ -244,7 +244,7 @@
                         <TextView
                             android:layout_marginTop="15dp"
                             android:layout_marginBottom="10dp"
-                            android:layout_marginStart="5dp"
+                            android:layout_marginEnd="5dp"
                             android:id="@+id/cntrating"
                             android:textSize="12sp"
                             android:textAlignment="center"
