--- a/app/src/main/res/layout/item_historylist.xml
+++ b/app/src/main/res/layout/item_historylist.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:padding="0dp"
         android:layout_margin="0dp"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -27,7 +27,8 @@
             tools:ignore="MissingConstraints">
 
             <TextView
-                android:layout_width="70dp"
+                android:layout_width="0dp"
+                android:layout_weight="2"
                 android:layout_height="wrap_content"
                 android:textAlignment="textStart"
                 android:text="From"
@@ -41,8 +42,8 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:padding="0dp"
-                android:layout_width="wrap_content"
-                android:layout_weight="7"
+                android:layout_width="0dp"
+                android:layout_weight="6"
                 android:layout_margin="0dp"
                 android:layout_height="wrap_content">
 
@@ -73,7 +74,7 @@
             <TextView
                 android:id="@+id/hist_date"
                 android:text="29-01-2025"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:textSize="14sp"
@@ -98,7 +99,8 @@
             tools:ignore="MissingConstraints">
 
             <TextView
-                android:layout_width="70dp"
+                android:layout_width="0dp"
+                android:layout_weight="2"
                 android:layout_height="wrap_content"
                 android:textAlignment="textStart"
                 android:text="To"
@@ -112,8 +114,8 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:padding="0dp"
-                android:layout_width="wrap_content"
-                android:layout_weight="7"
+                android:layout_width="0dp"
+                android:layout_weight="6"
                 android:layout_margin="0dp"
                 android:layout_height="wrap_content">
 
@@ -144,7 +146,7 @@
             <TextView
                 android:id="@+id/hist_pax"
                 android:text="1 pax"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:textSize="14sp"
