--- a/app/src/main/res/layout/item_transferlist.xml
+++ b/app/src/main/res/layout/item_transferlist.xml
@@ -13,14 +13,15 @@
             android:layout_margin="0dp"
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
+            android:minHeight="50dp"
             tools:ignore="MissingConstraints">
 
         <TextView
             android:id="@+id/transfer_name"
             android:text="London Heathrow Airport (LHR), United Kingdom"
-            android:layout_weight="10"
-            android:layout_width="wrap_content"
+            android:layout_weight="9"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_marginStart="20dp"
@@ -36,15 +37,17 @@
             android:textAlignment="textStart"
             android:gravity="center"
             android:textColor="@color/black"
-            android:layout_width="70dp"
+            android:layout_weight="4"
+            android:layout_width="0dp"
             android:paddingStart="10dp"
             android:paddingEnd="0dp"
             android:layout_height="match_parent"
             tools:ignore="RtlCompat" />
 
         <TextView
-            android:text="›"
-            android:layout_width="20dp"
+            android:text=" ›"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="match_parent"
             android:textAlignment="center"
             android:layout_marginEnd="20dp"
